# muiltprocessing

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: muiltprocessingConfig.cmake
example/: CMakeLists.txt  example.cpp  master.cpp  pyscripts.py
include/: muiltprocessing.hpp
